--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,3 +1,13 @@
 
-$info: #00a8f1;
+
+$primary: #2876E7;
+$danger: #E34F5C;
+
+.bg-info,
+.btn-info,
+.badge-info,
+.alert-info {
+    background-image: linear-gradient(to right, #00a8f1, #747CD9);
+}
+
 @import "../node_modules/bootstrap/scss/bootstrap";
